--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,22 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+/* Hilangkan scrollbar di semua browser */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none; 
+  scrollbar-width: none; 
+  
+}
+/* Tambahkan animasi transisi untuk perubahan tema */
+body {
+  background-image: url('/bg.jpg'); /* contoh */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed; /* ✨ ini yang bikin background diam */
+  transition: background-color 0.3s, color 0.3s;
+}
